--- a/docs/linux/toc.yml
+++ b/docs/linux/toc.yml
@@ -1,50 +1,50 @@
 - name: Documentazione di Linux con Visual Studio C++
-  href: index.md
+  href: ../linux/index.yml
 - name: 'Scaricare, installare e configurare il carico di lavoro per lo sviluppo di applicazioni Linux'
-  href: download-install-and-setup-the-linux-development-workload.md
+  href: ../linux/download-install-and-setup-the-linux-development-workload.md
 - name: Connettersi al computer Linux remoto
   expanded: true
   items:
     - name: Connettersi al computer Linux remoto
-      href: connect-to-your-remote-linux-computer.md
+      href: ../linux/connect-to-your-remote-linux-computer.md
     - name: Configurare lo sviluppo Linux remoto sicuro conforme con FIPS
-      href: set-up-fips-compliant-secure-remote-linux-development.md
+      href: ../linux/set-up-fips-compliant-secure-remote-linux-development.md
     - name: Informazioni di riferimento su ConnectionManager
-      href: connectionmanager-reference.md
+      href: ../linux/connectionmanager-reference.md
 - name: Creare un nuovo progetto Linux
-  href: create-a-new-linux-project.md
+  href: ../linux/create-a-new-linux-project.md
 - name: Configurare un progetto Linux
-  href: configure-a-linux-project.md
+  href: ../linux/configure-a-linux-project.md
 - name: Creare e configurare un progetto CMake per Linux
-  href: cmake-linux-project.md
+  href: ../linux/cmake-linux-project.md
 - name: Configurare progetti Linux per l'uso di Address Sanitizer
-  href: linux-asan-configuration.md
+  href: ../linux/linux-asan-configuration.md
 - name: 'Distribuire, eseguire e sottoporre a debug il progetto Linux'
-  href: deploy-run-and-debug-your-linux-project.md
+  href: ../linux/deploy-run-and-debug-your-linux-project.md
 - name: 'Esercitazione: Creare progetti multipiattaforma C++ in Visual Studio'
   href: ../build/get-started-linux-cmake.md
 - name: Informazioni di riferimento sulla pagina delle proprietà di un progetto Linux
   expanded: false
   items:
     - name: Informazioni di riferimento sulla pagina delle proprietà di un progetto Linux
-      href: prop-pages-linux.md
+      href: ../linux/prop-pages-linux.md
     - name: Proprietà generali (Linux)
-      href: prop-pages/general-linux.md
+      href: ../linux/prop-pages/general-linux.md
     - name: Proprietà di debug (Linux)
-      href: prop-pages/debugging-linux.md
+      href: ../linux/prop-pages/debugging-linux.md
     - name: Proprietà Directory di VC++ (Linux)
-      href: prop-pages/directories-linux.md
+      href: ../linux/prop-pages/directories-linux.md
     - name: Proprietà Copia origini (Linux)
-      href: prop-pages/copy-sources-project.md
+      href: ../linux/prop-pages/copy-sources-project.md
     - name: Proprietà C/C++ (Linux)
-      href: prop-pages/c-cpp-linux.md
+      href: ../linux/prop-pages/c-cpp-linux.md
     - name: Proprietà del linker (Linux)
-      href: prop-pages/linker-linux.md
+      href: ../linux/prop-pages/linker-linux.md
     - name: Proprietà di un evento di compilazione (Linux)
-      href: prop-pages/build-events-linux.md
+      href: ../linux/prop-pages/build-events-linux.md
     - name: Proprietà Istruzione di compilazione personalizzata (Linux)
-      href: prop-pages/custom-build-step-linux.md
+      href: ../linux/prop-pages/custom-build-step-linux.md
     - name: Proprietà di un progetto makefile (Linux)
-      href: prop-pages/makefile-linux.md
+      href: ../linux/prop-pages/makefile-linux.md
     - name: Proprietà di un archivio remoto (Linux)
-      href: prop-pages/remote-ar-linux.md
+      href: ../linux/prop-pages/remote-ar-linux.md
