commit translated contents

--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -4254,6 +4254,8 @@
           href: compiler-warnings/c5046.md
         - name: Avviso del compilatore (livello 1) C5105
           href: compiler-warnings/c5105.md
+        - name: Avviso del compilatore (livello 1) C5208
+          href: compiler-warnings/c5208.md
 - name: Avvisi del compilatore in base alla relativa versione
   href: compiler-warnings/compiler-warnings-by-compiler-version.md
 - name: Avvisi del compilatore disattivati per impostazione predefinita
