--- a/docs/cpp/toc.yml
+++ b/docs/cpp/toc.yml
@@ -125,7 +125,7 @@
       items:
         - name: 'Operatori predefiniti, precedenza e associazione'
           href: ../cpp/cpp-built-in-operators-precedence-and-associativity.md
-        - name: Operatore __alignof
+        - name: Operatore alignof
           href: ../cpp/alignof-operator.md
         - name: Operatore __uuidof
           href: ../cpp/uuidof-operator.md
