--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -94,6 +94,15 @@
           href: ../standard-library/atomic-functions.md
         - name: Enumerazioni <atomic>
           href: ../standard-library/atomic-enums.md
+    - name: <bit>
+      expanded: false
+      items:
+        - name: <bit>
+          href: ../standard-library/bit.md
+        - name: Funzioni<bit>
+          href: ../standard-library/bit-functions.md
+        - name: endian enum
+          href: ../standard-library/bit-enum.md
     - name: <bitset>
       expanded: false
       items:
