--- a/docs/overview/toc.yml
+++ b/docs/overview/toc.yml
@@ -15,6 +15,8 @@
       href: ../overview/supported-platforms-visual-cpp.md
     - name: Strumenti e funzionalità C++ nelle versioni di Visual Studio
       href: ../overview/visual-cpp-tools-and-features-in-visual-studio-editions.md
+    - name: Installare il supporto C11 e C17 in Visual Studio
+      href: ../overview/install-c17-support.md
     - name: Esempi
       href: ../overview/visual-cpp-samples.md
     - name: Guida e community
