--- a/docs/_breadcrumb/toc.yml
+++ b/docs/_breadcrumb/toc.yml
@@ -58,6 +58,9 @@
         - name: Analisi codice
           tocHref: /cpp/code-quality/
           topicHref: /cpp/code-quality/index
+        - name: Purificatori del codice
+          tocHref: /cpp/sanitizers/
+          topicHref: /cpp/sanitizers/index
         - name: Linguaggio C++
           tocHref: /cpp/cpp/
           topicHref: /cpp/cpp/index
