commit translated contents

--- a/docs/c-runtime-library/toc.yml
+++ b/docs/c-runtime-library/toc.yml
@@ -64,7 +64,7 @@
       href: ../c-runtime-library/global-state.md
     - name: Operazione matematiche generiche di tipo
       href: ../c-runtime-library/tgmath.md
-    - name: Runtime C (CRT) e file con estensione LIB della libreria standard C++
+    - name: File di runtime C (CRT) e libreria standard C++ (STL). lib
       href: ../c-runtime-library/crt-library-features.md
 - name: Routine di Universal C Runtime per categoria
   expanded: false
